[package]
name = "builder_derive"
version = "0.1.0"
authors = ["ltoddy <taoliu0509@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1"
